# n16-shell

./: Cargo.toml  README.md  flake.nix
apps/bar/: Cargo.toml
apps/bar/src/: bar.rs  components.rs  lib.rs
apps/bar/src/component/: mod.rs
apps/bar/src/components/: clock.rs
apps/launcher/: Cargo.toml
apps/launcher/src/: calculator.rs  gui.rs  launcher.rs  lib.rs  listings.rs  providers.rs
apps/launcher/src/component/: listing.rs  match_entry.rs  mod.rs  provider_section.rs  search.rs
apps/launcher/src/providers/: calculator.rs  mod.rs  power_management.rs
apps/launcher/src/providers/applications/: icon_theme.rs  listing.rs  mod.rs
apps/launcher/src/providers/power_management/: listing.rs  mod.rs
core/application/: Cargo.toml
core/application/src/: ipc.rs  lib.rs  multi_window.rs  single_window.rs  subscription.rs  thread.rs
core/config/: Cargo.toml
core/config/src/: config.rs  lib.rs
core/ipc/src/: lib.rs
core/ipc/src/api/: launcher.rs
core/theme/: Cargo.toml
core/theme/src/: lib.rs  serialize.rs
core/theme/src/components/: application.rs  container.rs  rule.rs  scrollable.rs  text_input.rs
core/widget/src/: helpers.rs  scrolled_column.rs
design-documents/: plugins.md  proposed_config.kdl
design-documents/proposed-plugin-structure/: plugin  plugin.kdl
design-documents/proposed-plugin-structure/translations/en-us/: plugin.ftl  settings.ftl
design-documents/proposed-plugin-structure/translations/en-us/nested/folder/: structure.ftl
n16-application/: Cargo.toml
n16-application/src/: lib.rs  multi_window.rs  single_window.rs  subscription.rs
n16-bar/: Cargo.toml
n16-bar/src/: lib.rs
n16-cli/: Cargo.toml  build.rs  ipc.rs
n16-cli/cli/: bar.rs  launcher.rs
n16-cli/src/: cli.rs  ipc.rs  main.rs
n16-core/: Cargo.toml
n16-core/src/: application.rs  lib.rs
n16-core/src/application/: mod.rs  thread.rs
n16-core/src/config/: base_config.rs  mod.rs
n16-core/src/theme/: Cargo.toml  components.rs  mod.rs  serialize.rs
n16-core/src/theme/components/: application.rs  button.rs  container.rs  rule.rs  scrollable.rs  svg.rs  text.rs  text_input.rs
n16-core/src/widget/: helpers.rs  mod.rs  scrolled_column.rs
n16-daemon/: Cargo.toml
n16-daemon/src/: application.rs  gui.rs  ipc.rs  lib.rs  main.rs
n16-daemon/src/bar/: components.rs  mod.rs
n16-daemon/src/bar/components/: clock.rs
n16-daemon/src/gui/: message.rs  shell.rs
n16-daemon/src/launcher/: gui.rs  mod.rs  providers.rs
n16-daemon/src/launcher/component/: match_entry.rs  mod.rs  provider_section.rs  search.rs
n16-daemon/src/launcher/providers/: calculator.rs  power_management.rs
n16-daemon/src/launcher/providers/applications/: icon_theme.rs  icons.rs  mod.rs
n16-ipc/: Cargo.toml
n16-ipc/src/: api.rs  lib.rs
n16-ipc/src/api/: bar.rs  launcher.rs
n16-launcher/: Cargo.toml
n16-launcher/src/: lib.rs  listings.rs
n16-launcher/src/component/: listing.rs  mod.rs  search.rs
n16-launcher/src/providers/applications/: listing.rs  mod.rs
n16-launcher/src/providers/power_management/: mod.rs
n16-plugin-interface/: Cargo.toml
n16-plugin-interface/src/: config.rs  messages.rs
n16-plugin-interface/src/messages/: launcher_provider.rs
n16-theme/: Cargo.toml
n16-theme/src/components/: application.rs  button.rs  rule.rs  svg.rs  text.rs  text_input.rs
n16-widget/: Cargo.toml
n16-widget/src/: lib.rs
nix/: n16-shell.nix
src/: component.rs  daemon.rs  ipc.rs  listings.rs  main.rs  message.rs  theme.rs
src/component/: listing.rs  mod.rs  search.rs
src/daemon/: gui.rs  ipc.rs
src/daemon/gui/: shell.rs
src/listings/: applications.rs
src/listings/applications/: base_dirs.rs  icon_theme.rs  icons.rs  listing.rs  mod.rs
src/providers/: mod.rs
src/providers/applications/: listing.rs  mod.rs
src/providers/power_management/: listing.rs
src/theme/: application.rs  button.rs  container.rs  rule.rs  scrollable.rs  svg.rs  text.rs  text_input.rs
src/widget/: mod.rs  scrolled_column.rs
