[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace]
members = [
  "n16-ipc",
  "n16-core",
  "apps/*",
  "n16-daemon",
  "n16-cli"
]

resolver = "3"

[workspace.dependencies]
n16-core = { path = "./n16-core" }
n16-ipc = { path = "./n16-ipc" }

n16-launcher = { path = "./apps/launcher" }
n16-bar = { path = "./apps/bar" }

iced = { version = "0.14.0", features = ["tokio", "advanced", "image", "svg"] }
iced_layershell = "0.18.1"
iced_futures = "0.14.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
knus = "3.4.0"

tokio = { version = "1.48.0", features = ["net", "io-util", "macros"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
async-trait = "0.1.89"

itertools = "0.15.0"
git-version = "0.3.9"
rustix = { version = "1.1.2", features = ["process"]}

[workspace.lints.clippy]
pedantic = "warn"
