[package]
name = "n16-core"
version.workspace = true
edition.workspace = true

[dependencies]
n16-ipc.workspace = true

iced.workspace = true
iced_layershell.workspace = true

async-trait.workspace = true
async-channel.workspace = true
async-oneshot.workspace = true

knus.workspace = true
miette = { version="7.6.0", features=["fancy"] }
