[package]
name = "n16-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
n16-theme.workspace = true
n16-application.workspace = true
n16-ipc.workspace = true
n16-config.workspace = true

n16-launcher.workspace = true
n16-bar.workspace = true

iced.workspace = true
iced_layershell.workspace = true

serde_json.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
