[package]
name = "n16-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
n16-theme.workspace = true
n16-widget.workspace = true

iced.workspace = true
iced_layershell.workspace = true
itertools.workspace = true

freedesktop-desktop-entry = "0.7.5"
phf = "0.11.2"
tini = "1.3.0"
xdg = "2.5.2"