[package]
name = "n16-launcher"
version.workspace = true
edition.workspace = true

[dependencies]
n16-theme.workspace = true
n16-widget.workspace = true
n16-application.workspace = true
n16-ipc.workspace = true

iced.workspace = true
iced_layershell.workspace = true

tokio.workspace = true

itertools.workspace = true

freedesktop-desktop-entry = "0.7.5"
phf = "0.11.2"
tini = "1.3.0"
xdg = "2.5.2"
dyn-clone = "1.0.19"
