[package]
name = "n16-launcher"
version.workspace = true
edition.workspace = true

[dependencies]
n16-core.workspace = true
n16-ipc.workspace = true

iced.workspace = true
iced_layershell.workspace = true

tokio.workspace = true
async-channel.workspace = true
async-trait.workspace = true
futures-lite.workspace = true

itertools.workspace = true

freedesktop-desktop-entry = "0.8.1"
tini = "1.3.0"
xdg = "3.0.0"
dyn-clone = "1.0.19"
fend-core = "1.5.6"
